# legiscope

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
experimental/: README.md  downcode.py  list_contents.py  main.py  pyproject.toml  robots.py
notebooks/: README.md  demo_nb.py  template-workflow.py
scripts/: convert_docx.sh  convert_to_markdown.py  create_embeddings.py  create_jurisdiction.py  example_query.py  pipeline.sh  run_queries.py  segment_legal_code.py
src/legiscope/: __init__.py  code.py  config.py  convert.py  embeddings.py  llm_config.py  model_config.py  query.py  retrieve.py  segment.py  utils.py
tests/: test_code.py  test_convert.py  test_embeddings.py  test_llm_config_env.py  test_query.py  test_retrieve.py  test_segment.py  test_utils.py
