[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legiscope"
version = "0.1.0"
description = "Automated analysis of municipal codes for legal epidemiology"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Johnathan Jenkins", email = "jj@jsqr.org"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "openai",
    "mistralai",
    "marimo",
    "instructor",
    "tiktoken",
    "loguru",
    "PyYAML",
    "polars[pyarrow]",
    "chromadb",
    "ollama",
    "duckdb>=1.4.2",
    "sqlglot>=27.29.0",
    "python-lsp-server>=1.13.1",
    "websockets>=15.0.1",
    "python-lsp-ruff>=2.3.0",
    "nbformat>=5.10.4",
    "altair>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[project.urls]
Homepage = "https://github.com/jsqr/legiscope"

[tool.hatch.build.targets.wheel]
packages = ["src/legiscope"]

[tool.pytest.ini_options]
pythonpath = ["src"]
